# Vybe

./: .coveragerc  .filter-globs.txt  .gitignore  DATABASE_SCHEMA.md  PR_DESCRIPTION.md  README.md  SCHEDULED_DELETION_JOB_SETUP.md  check_friend_request_function.sql  get_function_definition.sql  inspect_supabase_schema.sql  package-lock.json  pyproject.toml  sprint-3-timeline.md  sprint3-code-analysis.md
.github/: README.md
.github/ISSUE_TEMPLATE/: pbi.md
.github/workflows/: backend-ci.yml  ci-cd.yml  codeql-analysis.yml  codeql.yaml  codeql.yml  frontend-ci.yml
OneDrive/Documents/Vybe/: .gitignore
apps/web/: .eslintignore  .eslintrc.json  .gitignore  ADD_YOUTUBE_URL.sql  DATABASE_SCHEMA.md  DEPLOYMENT_GOOGLE_YOUTUBE_SETUP.md  DEPLOYMENT_SPOTIFY_SETUP.md  MIGRATION_INSTRUCTIONS.md  README.md  SETUP_DATABASE.sql  SMART_SORTING_SETUP.md  TESTING.md  check_users_table.sql  eslint.config.mjs  friendsprivacy.sql  middleware.js  middleware.ts  migration.sql  next.config.ts  package-lock.json  package.json  playwright.config.ts  sprint3.txt  tsconfig.json  vercel.json  verify_friends.sql  vitest.config.mjs  vitest.config.ts  vitest.setup.tsx
apps/web/.github/workflows/: codeql.yml
apps/web/.next/: build-manifest.json  postcss.js  prerender-manifest.json  trace
apps/web/.next/cache/: .rscinfo
apps/web/.next/server/: middleware-build-manifest.js  middleware-manifest.json  server-reference-manifest.js  server-reference-manifest.json
apps/web/.next/types/: routes.d.ts
apps/web/__tests__/: Navbar.test.jsx
apps/web/app/: globals.css  layout.jsx  layout.tsx  page.jsx
apps/web/components/: AddFriendsModal.jsx  AuroraBackground.jsx  ClientProviders.jsx  CreateGroupModal.jsx  Dashboard.jsx  DeleteAccountModal.jsx  ExportPlaylistButton.jsx  ExportToSpotifyButton.jsx  FriendRequestsModal.jsx  HomePage.jsx  JoinGroupModal.jsx  LibraryView.jsx  Navbar.jsx  NotificationBell.jsx  NotificationDropdown.jsx  NotificationToggle.jsx  PrivacyToggle.jsx  ProfilePictureUpload.jsx  QueryProvider.jsx  SaveStatusIndicator.jsx  SettingsConflictDialog.jsx  SettingsNav.jsx  SettingsPageWrapper.jsx  SettingsSyncIndicator.jsx  SongSearchModal.jsx  ThemeScript.jsx  ThemeToggle.jsx  Toast.jsx  UrlTokenCleanup.jsx  UserDataPrefetcher.jsx  ValidationError.jsx
apps/web/config/: constants.js
apps/web/contexts/: ThemeContext.jsx
apps/web/docs/: api-endpoints.md  system-architecture.md
apps/web/hooks/: useAutoSave.js  useDialog.js  useGroups.js  useNotificationPreferences.js  useNotifications.js  usePrivacySettings.js  useProfileUpdate.js  useSettingsMigration.js  useSettingsSync.js  useSettingsValidation.js  useSocial.js
apps/web/lib/: getUserProvider.js  google.js  spotify-export.js  spotify.js  spotifyExport.ts  youtube.js
apps/web/scripts/: check-google-tokens.js  seed-play-history.js
apps/web/store/: settingsStore.js
apps/web/test/: export-playlist.test.js  helpers.js  setup.ts  spotify-export.test.js  test-utils.jsx  utils.test.js
apps/web/test-results/: .last-run.json
apps/web/tests/: setup.ts
apps/web/utils/: clipboard.js
backend/: README.md  code_service.py  coverage.xml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_tests.py
backend/app/: config.py  main.py
backend/app/data/: headers_dev.json
backend/app/routers/: code_router.py  utils_router.py  ytm_router.py
backend/app/schemas/: utils_models.py
backend/app/services/: code_service.py  utils_service.py
backend/app/tests/: test_code_router.py  test_code_service.py  test_codes.py  test_config.py  test_integration.py  test_main.py  test_schemas.py  test_utils_router.py  test_utils_service.py
backend/data/: headers_dev.json
backend/tests/: conftest.py  test_sample.py
vybe-backend/: package-lock.json  package.json  server.js
vybe-frontend/: package-lock.json  package.json
vybe-frontend/src/: App.jsx  apiTest.js
(+430 files in other folders)
